# Logistic_System_Backend

./: pyproject.toml
alembic/: env.py
alembic/versions/: 061794744232_create_users_table.py  9f27e1106018_add_drivers_table.py
src/logistic_system_api/: app.py
src/logistic_system_api/core/: database.py  models.py  schemas.py  security.py  settings.py
src/logistic_system_api/routers/: drivers.py  users.py
