[project]
name = "logistic-system-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "sqlalchemy (>=2.0.50,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "fastapi[standard] (>=0.136.3,<0.137.0)",
    "psycopg-binary (>=3.3.4,<4.0.0)",
    "psycopg (>=3.3.4,<4.0.0)"
]

[tool.poetry]
packages = [{include = "logistic_system_api", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "taskipy (>=1.14.1,<2.0.0)",
    "ruff (>=0.15.16,<0.16.0)"
]

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.taskipy.tasks]
lint = 'ruff check'
pre_format = 'ruff check --fix'
format = 'ruff format'
run = 'fastapi dev src/logistic_system_api/app.py'
pre_test = 'task lint'
test = 'pytest -s -x --cov=src/logistic_system_api -vv'
post_test = 'coverage html'